--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Фёдор Михайлович Достоевский</title>
-    <link rel="stylesheet" href="C:\Users\bravl\Desktop\web-engineering\лаб 2\style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- ЗАГОЛОВОК -->
@@ -139,4 +139,5 @@
         </div>
     </footer>
 </body>
+
 </html>
