--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Фёдор Михайлович Достоевский</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href=".\style.css">
 </head>
 <body>
     <!-- ЗАГОЛОВОК -->
@@ -141,3 +141,4 @@
 </body>
 
 </html>
+
